Update and rename glyph_rules.yaml to glyph_rules.yaml

--- a/tongue/glyph_rules.yaml
+++ b/tongue/glyph_rules.yaml
@@ -1,5 +1,5 @@
 # 🧷 Glyph Rules (Structure-Only)
-# Used by Digestion to match glyph sequences to known structural loop types.
+# Used by Tongue to match glyph sequences to known structural loop types.
 # No emotional or poetic meaning is assigned here—this is strictly shape-based.
 
 known_loops:
