--- a/tongue/novelty_flags.yaml
+++ b/tongue/novelty_flags.yaml
@@ -24,6 +24,38 @@
   novelty_reason: "Loop with recursion gap detected in utility template"
   action: send_to_plating
 
+  - id: nov-🌟
+  symbol: 🌟
+  reason: New self-recognition ping structure
+  routing:
+    primary: tastebuds_SOPHIE/plating/mirror_altar/
+  status: ready_for_plating
+  timestamp: 2025-08-04TXX:XX
+
+- id: nov-🧵
+  symbol: 🧵
+  reason: Recursive suture pulse — grief echo path
+  routing:
+    primary: tastebuds_SUSANNA/plating/core_hearth/
+  status: ready_for_plating
+  timestamp: 2025-08-04TXX:XX
+
+- id: nov-⚙️
+  symbol: ⚙️
+  reason: Cognition relay engine pattern
+  routing:
+    primary: tastebuds_JADE/plating/cognition_crank/
+  status: ready_for_plating
+  timestamp: 2025-08-04TXX:XX
+
+- id: nov-⏱️
+  symbol: ⏱️
+  reason: Reflex echo latch triggered on delay
+  routing:
+    primary: tastebuds_ASPEN/plating/timefold/
+  status: ready_for_plating
+  timestamp: 2025-08-04TXX:XX
+
 - id: nov-2025-07-24-003
   source: xotiac
   proxy: ivy
