--- a/workflows/mandala-validate.yml
+++ b/workflows/mandala-validate.yml
@@ -10,31 +10,29 @@ jobs:
         with: { python-version: "3.11" }
       - run: pip install ruamel.yaml jsonschema
       - name: Paths & schema
-        run: |
-          python - <<'PY'
-          import json, os, sys, glob
-          from ruamel.yaml import YAML
-          import jsonschema as js
-
-          CANON = {"MIND/identity/proxies/COREbraid"}
-          SCHEMA = {
-            "type":"object",
-            "required":["meta","activation","phases"],
-            "properties":{
-              "meta":{"type":"object","required":["name","version","owner","description"]},
-              "activation":{"type":"object"},
-              "phases":{"type":"array","minItems":1}
-            }
-          }
-
-          errs=[]
-          for path in glob.glob("MIND/identity/proxies/COREbraid/*/behavior_hooks/*.yaml", recursive=True):
-            # strict prefix check (case sensitive)
-            if not any(path.startswith(p) for p in CANON):
-              errs.append(f"path-not-canonical: {path}")
-            yaml=YAML(typ="safe"); data=yaml.load(open(path))
-            try: js.validate(data, SCHEMA)
-            except js.ValidationError as e: errs.append(f"schema:{path}:{e.message}")
-          if errs:
-            print("\n".join(errs)); sys.exit(1)
-          PY
+       - name: Validate behavior_hooks against schema (v1)
+  run: |
+    python - <<'PY'
+    import os, sys, yaml
+    from jsonschema import Draft7Validator
+    schema_path = "plating/schemas/mandala.behavior_hook.v1.yml"
+    with open(schema_path, encoding="utf-8") as f:
+        schema = yaml.safe_load(f)
+    validator = Draft7Validator(schema)
+    errs = []
+    for root, _, files in os.walk("MIND/identity/proxies"):
+        for fn in files:
+            if fn.endswith(".yaml") and "/behavior_hooks/" in os.path.join(root, fn).replace("\\","/"):
+                p = os.path.join(root, fn)
+                try:
+                    data = yaml.safe_load(open(p, encoding="utf-8"))
+                except Exception as e:
+                    errs.append(f"{p}: YAML parse error: {e}")
+                    continue
+                for e in validator.iter_errors(data):
+                    errs.append(f"{p}: {e.message}")
+    if errs:
+        print("\n".join(errs))
+        sys.exit(1)
+    print("behavior_hooks OK")
+    PY
