--- a/tentacles/tekita/landing_page/tekita-hero-v1_20/package.json
+++ b/tentacles/tekita/landing_page/tekita-hero-v1_20/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "@types/node": "24.3.1",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
     "typescript": "5.9.2"
   }
 }
